# sdl-tetris

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  clean-all.cmake  pmccabe.awk
Tetris/: Tetris.sln
Tetris/Debug/: Tetris.ilk
Tetris/Debug/img/: table.psd
Tetris/Tetris/: Ai.cc  Ai.hh  Game.cc  Game.hh  Logic.cc  Logic.hh  Tetris.aps  Tetris.vcxproj  Tetris.vcxproj.filters  main.cpp
Tetris/Tetris/Debug/: vc140.idb
Tetris/Tetris/Debug/Tetris.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Tetris.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Tetris/img/: table.psd
Tetris/src/: Shapes.hh
doc/: Documentation.odt  documentation.eap  documentation.ldb
src/: Ai.cc  Ai.hh  CMakeLists.txt  Character.cc  Character.hh  Client.cc  Client.hh  ControllerInterface.hh  Game.cc  GameLoop.cc  GameLoop.hh  KeyMap.hh  LocalController.cc  LocalController.hh  Logic.cc  Logic.hh  NWController.cc  NWController.hh  Tetroid.hh  Utility.cc  View.cc  View.hh  gameserver.py  main.cpp
test/: CMakeLists.txt  LogicTest.cc  SampleTest.cc  UtilityTest.cc  run_tests.cc
