add_library(sources Utility.cc Ai.cc GameLoop.cc Logic.cc View.cc Character.cc LocalController.cc NWController.cc Client.cc)
add_executable(Tetris main.cpp)
include(FindPkgConfig)
PKG_SEARCH_MODULE(SDL2 REQUIRED sdl2)
PKG_SEARCH_MODULE(SDL2IMAGE REQUIRED SDL2_image>=2.0.0)
PKG_SEARCH_MODULE(SDL2TTF REQUIRED SDL2_ttf>=2.0.0)
PKG_SEARCH_MODULE(TCLAP REQUIRED tclap)
include_directories(${SDL2_INCLUDE_DIRS} ${SDL2IMAGE_INCLUDE_DIRS} ${SDL2TTF_INCLUDE_DIRS} ${TCLAP_INCLUDE_DIRS})
target_link_libraries(Tetris ${SDL2_LIBRARIES} ${SDL2IMAGE_LIBRARIES} ${SDL2TTF_LIBRARIES} ${TCLAP_LIBRARIES} sources -lSDL2)
